# 4_semester_magis

./: README.md  ~$Статья.docx  Отчет по преддипломной практике.docx  Статья.docx
CudaLab/: CMakeLists.txt  analysis.ipynb  cmake_install.cmake  cudaErrorHandling.h  example.h  makefile  matmulKernel.cu  matmulMain.cpp  run.sh  run_1.sh
ISS/: lab_03.ipynb  Лекции_1_ИПС.ipynb  Лекции_2_ИПС.ipynb  Лекции_3_ИПС.ipynb  Лекция_4_ИПС.ipynb  Лекция_5_ИПС.ipynb
ISS/lab1/: main.ipynb  ~$_1_ИПС_Отчёт.docx  ЛР_1_ИПС_Отчёт.docx
ISS/lab2/: main.ipynb  ЛР_2_ИПС_Отчёт.docx
ISS/lab3/: export.json  legal_ips_variant.db  main.ipynb  ЛР_3_ИПС_Отчёт.docx
ISS/lab3/report/: ЛР_3_ИПС_Отчёт.docx
ISS/lab_01/: main.ipynb  main.py  requirements.txt  tokenizer.pickle
ISS/lab_01/writers/: (Булгаков) Обучающая_5 вместе.txt  (Булгаков) Тестовая_2 вместе.txt  (Клиффорд_Саймак) Обучающая_5 вместе.txt  (Клиффорд_Саймак) Тестовая_2 вместе.txt  (Рэй Брэдберри) Обучающая_22 вместе.txt  (Рэй Брэдберри) Тестовая_8 вместе.txt  (Стругацкие) Обучающая_5 вместе.txt
ISS/lab_02/sql_scripts/: data.sql  index.sql  init.sql
SoftwareVerification/example/lab01/: example.c  lab.pml  (+1 more)
SoftwareVerification/lab 1/: Makefile  main.out  pan.c  pan.h
SoftwareVerification/lab01/: Makefile
SoftwareVerification/lab02/: Makefile  lab.pml
SoftwareVerification/lab03/: Makefile  lab.pml
SoftwareVerification/lab1/: pan.b  pan.m  pan.t
SoftwareVerification/lab2/: a.out  lab.pml  lab.pml.trail  lab_mutex.pml  pan.b  pan.c  pan.h  pan.m  pan.t  run.txt
SoftwareVerification/lab3/: lab copy 2.pml  lab.pml  pan.b  pan.c  pan.h  pan.m  pan.t
nir/: TZ_NIR.docx  part2.drawio  ~$РПЗ.docx  Доклад.docx  Презентация.pptx  РЕФЕРАТ.docx  РПЗ.docx  содержание.txt
(+63 files in other folders)
